adjusted grid padding (20px on mobile, 40px on tablet). Fixed main-content bug on homepage. Adjusted project titles breakpoints on work page.

--- a/app/_scss/base/_variables.scss
+++ b/app/_scss/base/_variables.scss
@@ -46,7 +46,8 @@ $breakpoint-three: 1400;
 $breakpoint-three-px: #{$breakpoint-three}px;
 
 // GRID STUFFZ
-$side-padding-px: 16px;
-$grid-max-width-px: 786px + (2*$side-padding-px);
-$grid-wide-max-width-px: 1300px + (2*$side-padding-px);
-$grid-gap-px: ($side-padding-px + $grid-max-width-px - $grid-wide-max-width-px)/2;
+$side-padding-mobile: 20px;
+$side-padding-grid-px: 40px;
+$grid-max-width-px: 786px + (2*$side-padding-grid-px);
+$grid-wide-max-width-px: 1300px + (2*$side-padding-grid-px);
+$grid-gap-px: ($side-padding-grid-px + $grid-max-width-px - $grid-wide-max-width-px)/2;
